# scraper_par_semaine_ac

./: .gitignore  README.md  diagram_movies.md  pyproject.toml  requirements.txt
AllocineProject/: pyproject.toml
AllocineProject/AllocineFolder/: function_app.py
moviesweeklyscraper/: scrapy.cfg
moviesweeklyscraper/moviesweeklyscraper/: items.py  middlewares.py  pipelines.py  settings.py
moviesweeklyscraper/moviesweeklyscraper/spiders/: moviesspider.py
